--- a/index.html
+++ b/index.html
@@ -115,16 +115,13 @@
 						</article>
 					</div>
 					<div class="col-4 col-12-mobile">
-<!--	This is for after finishing YelpCamP, replace below with the 3 up top	
-						
 						<article class="item">
-							<a href="#" alt="" class="image fit"><img src="images/yelpcamp.png" alt="" class="img-thumbnail" width="" height="250"></a>
+							<a href="https://afternoon-reef-70682.herokuapp.com/" alt="" class="image fit"><img src="images/yelpcamp.png" alt="" class="img-thumbnail" width="" height="250"></a>
 							<header>
 								<h3>Yelpcamp</h3>
  								<p>YelpCamp is a website where users can create and review campgrounds. In order to review or create a campground, you must have an account. This project was created using Node. js, Express, MongoDB, and Bootstrap.</p>
 							</header>
 						</article>
- -->					
 					</div>	
 					<div class="col-4 col-12-mobile">
 						<article class="item">
